--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jun 09 19:07:21 KST 2020
-sdk.dir=C\:\\Users\\pcj\\AppData\\Local\\Android\\Sdk
+#Thu Jul 09 11:47:31 KST 2020
+sdk.dir=C\:\\Users\\Administrator\\AppData\\Local\\Android\\Sdk
